K1J-1525: Reformat the whole project with spotless including updating the year in license headers